--- a/Views/Configuration.xaml
+++ b/Views/Configuration.xaml
@@ -40,12 +40,12 @@
 
 						<StackPanel Orientation="Horizontal" Margin="0,10,0,0">
 							<Label Content="SINGLE INSTANCE (only one exe running):" Width="200"/>
-							<Controls:ToggleSwitch x:Name="ConfSingleInstance"
+							<!--<Controls:ToggleSwitch x:Name="ConfSingleInstance"
                                    Margin="0,3,5,0"
                                    IsChecked="True"
                                    OffLabel=" Disabled"
                                    OnLabel=" Enabled"
-                                   Style="{DynamicResource MahApps.Metro.Styles.ToggleSwitch.Win10}" />
+                                   Style="{DynamicResource MahApps.Metro.Styles.ToggleSwitch.Win10}" /> -->
 						</StackPanel>
 
 					</StackPanel>
